<resources>
    <string name="app_name">MissYou</string>
    <string name="view_profile">View</string>
    <string name="my_profile">My Profile</string>
    <string name="my_post">My Posts</string>
    <string name="view_post">View</string>
    <string name="settings">Settings</string>
    <string name="go_settings">goSettings</string>
    <string name="profile">profile</string>
    <string name="posts">posts</string>
    <string name="logout">Logout</string>
    <string name="descriptions">Description</string>
    <string name="go_newpost">New Post</string>
    <string name="profile_editfinish">Done</string>
    <string name="title_activity_pet_location_maps">PetLocationMap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- TODO: Remove or change this placeholder text -->

    <!--
    <string name="hello_blank_fragment">Hello blank fragment</string>
    -->
</resources>
