<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="40dp"
        android:text="@string/my_post"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/viewPost"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/myProfile" />

    <Button
        android:id="@+id/viewPost"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="76dp"
        android:background="#DB1212"
        android:onClick="goMyPosts"
        android:text="@string/view_post"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/viewProfile" />

    <Button
        android:id="@+id/viewProfile"
        android:layout_width="0dp"
        android:layout_height="32dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="76dp"
        android:background="#DB1212"
        android:onClick="goMyProfile"
        android:text="@string/view_profile"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/myProfile"
        android:layout_width="82dp"
        android:layout_height="29dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="244dp"
        android:layout_marginEnd="40dp"
        android:text="@string/my_profile"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/viewProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>